--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
  <body>  
     <P>
-        <b>welcome to flipkart</b>
+        <b>welcome to flipkart Shopping</b>
     <h1>Trending Offers</h1>
     <img src="headphone.jpeg" alt="cant display" width="100" pix height="100" pix/> 
     <h2> headphones </h2> 
