added 3rd commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
  <body>  
     <P>
         <b>welcome to flipkart Shopping</b>
-    <h1>Trending Offers</h1>
+    <h1>Trending Offers for Diwali</h1>
     <img src="headphone.jpeg" alt="cant display" width="100" pix height="100" pix/> 
     <h2> headphones </h2> 
     </P>
@@ -13,10 +13,5 @@
     <img src="wrist watchs.jpeg" alt="cant display" width="100" pix height="100" pix/> 
     <h3>wrist watches</h3>  
     </p>
-    <p>
-        you can also access flipkart by using the below link <br/>
-        <a href=https://www.flipkart.com
-        > flipkart</a>
-    </p>
- </body>   
+</body>   
 </html>
